Fixed nav on mobile

--- a/public/style.css
+++ b/public/style.css
@@ -17,9 +17,15 @@ textarea {
 }
 nav {
   position: fixed; bottom: 0; left: 0;
-  box-sizing: border-box; width: 100%; height: 2rem; padding: 0 0.5em;
+  box-sizing: border-box; width: 100%; min-height: 2rem; padding: 0 0.5em;
   background-color: #eee; border-top: 1px solid silver;
   line-height: 2rem; color: gray; font-family: sans-serif; font-size: 85%;
+}
+@media screen and (max-width: 800px) {
+  nav {
+    display: flex;
+    flex-wrap: wrap;
+  }
 }
 #controls {
   float: right;
